fix responsiveness on mobiles: grid

--- a/src/AllListsPage/EditListModal.css
+++ b/src/AllListsPage/EditListModal.css
@@ -34,3 +34,9 @@
   flex-direction: row;
   gap: 3rem;
 }
+
+@media only screen and (max-width: 900px) {
+  .list-edit-modal {
+    width: 70%;
+  }
+}
