--- a/src/SingleListPage/TaskList/SingleTask.css
+++ b/src/SingleListPage/TaskList/SingleTask.css
@@ -18,7 +18,6 @@
 }
 
 .task-bar--item {
-  height: 3rem;
   padding: 0;
   display: flex;
   align-items: center;
@@ -33,7 +32,7 @@
 }
 
 .text {
-  width: 30%;
+  width: 50%;
   padding-left: 2rem;
   border: none;
   box-sizing: border-box;
@@ -53,8 +52,12 @@
   text-decoration: line-through;
 }
 
+.date-container {
+  width: 15%;
+}
+
 .date {
-  width: 10rem;
+  width: 100%;
   justify-content: center;
   border: none;
 }
@@ -64,7 +67,7 @@
 }
 
 .tag {
-  width: 10rem;
+  width: 15%;
   padding: 0.25rem 0.6rem;
   text-align: center;
   font-size: 0.9rem;
@@ -94,45 +97,98 @@
 @media only screen and (max-width: 600px) {
   .task-bar {
     width: 95%;
+    display: grid;
+    grid-template-columns: repeat(8, 1fr);
+    grid-template-rows: 2rem 1.5rem;
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0.3);
+    gap: 0;
+  }
+
+  .task-bar--item {
+    box-shadow: none;
+  }
+
+  .done {
+    width: 100%;
+    grid-column: 1 / span 1;
+    grid-row: 1 / span 2;
+  }
+
+  .remove {
+    width: 100%;
+    grid-column: 8 / span 1;
+    grid-row: 1 / span 2;
+  }
+
+  .date-container {
+    width: 100%;
+    grid-column: 2 / span 3;
+    font-size: 0.7rem;
+    grid-row: 2 / span 1;
   }
 
   .date {
-    width: 4rem;
-    font-size: 0.7rem;
-    padding: 0.3rem;
+    font-size: 0.8rem;
+    height: 100%;
+  }
+
+  .no-date {
+    font-size: 0.8rem;
   }
 
   .tag {
-    width: 4rem;
-    font-size: 0.7rem;
+    width: 100%;
+    grid-column: 5 / span 3;
+    font-size: 0.8rem;
+    grid-row: 2 / span 1;
+  }
+
+  .tag-empty {
+    font-size: 0.8rem;
   }
 
   .text {
-    width: 60%;
+    width: 100%;
+    grid-column: 2 / span 6;
+    grid-row: 1 / span 1;
     color: #1976d2;
-    padding-left: 0.8rem;
+    padding: 0.5rem 0.75rem 0 0.75rem;
   }
 }
 
 @media only screen and (min-width: 601px) and (max-width: 1000px) {
+  .task-bar {
+    width: 95%;
+  }
+
   .text {
-    width: 15rem;
+    width: 40%;
   }
 
   .tag {
-    width: 8rem;
+    width: 20%;
   }
 
   .done {
-    width: 3rem;
+    width: 10%;
   }
 
   .remove {
-    width: 3rem;
+    width: 10%;
+  }
+
+  .date-container {
+    width: 20%;
   }
 
   .date {
-    width: 8rem;
+    width: 100%;
+  }
+}
+
+@media only screen and (min-width: 601px) {
+  .task-bar--item {
+    min-height: 3rem;
   }
 }
 
